--- a/index.html
+++ b/index.html
@@ -85,6 +85,31 @@
 
       <section class="task">
         <button class="wk0c"></button>
+        <p>Change the Canvas Information.</p>
+        <div>
+          <ul>
+            <li>Select the Dashboard icon on the left panel.</li>
+            <li>Click the new WDD231 course.</li>
+            <li>Select the tripple dots and change the Nickname. The current name will have you section number and the full name of the coruse which gets clipped.</li>
+            <li>Update the Canvas name to include WDD231 and the term number 1-6 (as appropiate)</li>
+            <li>OPTIONAL - Open your Canvas course and choose the "Settings" link at the bottom of the list</li>
+            <li>Click the "Choose Image" link and select "Upload Image" to choose a new image from your files.</li>
+          </ul>
+          <p>Here are the PNG icons I use for my classes.</p>
+          <p class="icons">
+            <img src="images/canvas-icon-t1.png" alt="canvas term 1">
+            <img src="images/canvas-icon-t2.png" alt="canvas term 2">
+            <img src="images/canvas-icon-t3.png" alt="canvas term 3">
+            <img src="images/canvas-icon-t4.png" alt="canvas term 4">
+            <img src="images/canvas-icon-t5.png" alt="canvas term 5">
+            <img src="images/canvas-icon-t6.png" alt="canvas term 6">
+          </p>
+        </div>
+      </section> <!-- End of this section -->
+
+
+      <section class="task">
+        <button class="wk0d"></button>
         <p>Connect Teams and Canvas</p>
         <div>
           <p>Open Canvas, select settings, click the "Intergrations" tab and activate Microsoft Sync. Click the "Sync
@@ -109,7 +134,7 @@
 
 
       <section class="teams">
-        <button class="wk0d"></button>
+        <button class="wk0e"></button>
         <p>Post a message in Teams</p>
         <div>
           <p>Post a message NOT to use the "General Channel". When we get over 100 people talking over 6 weeks, this
@@ -122,7 +147,7 @@
 
 
       <section class="task">
-        <button class="wk0e"></button>
+        <button class="wk0f"></button>
         <p>Change the Teams Information.</p>
         <div>
           <ul>
@@ -152,7 +177,7 @@
 
 
       <section class="task">
-        <button class="wk0f"></button>
+        <button class="wk0g"></button>
         <p>Add Five standard MS Teams channels for the weekly discussions</p>
         <div>
           <p>Add a class channel for each week for class discussions "General Questions - Week 1" etc.</p>
@@ -176,7 +201,7 @@
       </section> <!-- End of this section -->
 
       <section class="teams">
-        <button class="wk0g"></button>
+        <button class="wk0h"></button>
         <p>Pre-term Checklist</p>
         <div>
           <p>You will get an email link this week for the preterm checlkist. Please review and submit it.</p>
