--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
           <p>It's going to be a fantastic and fast-paced ride for the next few weeks, so take your vitamin pills, and
             let's
             get started.
-          <p>If you find yourself overwhelmed within the first week, you can drop the class using these instructions.
-          </p>
-          <p>https://byui-help.screenstepslive.com/a/884683-how-to-withdraw-from-class</p>
+          <p>If you find yourself overwhelmed within the first week, you should drop the class.</p>
+    
           <p>Bro/Sister Smith</p>
 
         </div>
