--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
         <button class="wk0e"></button>
         <p>Post a message in Teams</p>
         <div>
-          <p>Post a message NOT to use the "General Channel". When we get over 100 people talking over 6 weeks, this
-            becomes a
-            mess.🤪</p>
+          <p>Post a message NOT to use the "General Channel".</p>
+          <p>SUBJECT: Do Not Post Here <br>Please use Teams "Channels" to ask and answer questions about each assignment. We have a separate channel for each assignment to make it easier to post questions and find answers.
+            Please don't post to this General Channel.</p>
           <img src="images/teams-message.webp">
         </div>
       </section> <!-- End of this section -->
@@ -192,6 +192,7 @@
             about 10
             minutes)</p>
           <img src="images/channels.webp">
+          <h3>Change the Canvas "Group Membership Limit" to accomidate all your students. If you have 100 students and 12 groups, you may want to set each group to 10 so you have plenty of room for everyone.</h3>
           <h3>Weekly Hints</h3>
           <p>If you have advice, tips, or hints for a specific week then post them to the General Questions for the
             related
