--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
             about 10
             minutes)</p>
           <img src="images/channels.webp">
-          <h3>Change the Canvas "Group Membership Limit" to accomidate all your students. If you have 100 students and 12 groups, you may want to set each group to 10 so you have plenty of room for everyone.</h3>
+          <h3>Group Size</h3>
+          <p>Change the Canvas "Group Membership Limit" to accommodate all your students. If you have 100 students and 12 groups, you may want to set each group to 10 so you have plenty of room for everyone.</p>
           <h3>Weekly Hints</h3>
           <p>If you have advice, tips, or hints for a specific week then post them to the General Questions for the
             related
