--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="css/styles.min.css">
 
-  <title>Web Lab Start File</title>
+  <title>WDD231 Student Outreach</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -62,6 +62,7 @@
             let's
             get started.
           <p>If you find yourself overwhelmed within the first week, you should drop the class.</p>
+          <p>https://studentservices.byupathway.edu/portal/class-schedule#how-do-i-register-and-drop-courses-in-a-term</p>
     
           <p>Bro/Sister Smith</p>
 
