--- a/index.html
+++ b/index.html
@@ -49,13 +49,11 @@
           <p><b>SUBJECT:</b> Welcome to WDD231, the best class ever!</p>
           <p>What a fantastic opportunity to work with students from around the world who share a common faith.</p>
           <p>Class begins on <time class="date1a"></time>, and we must hit the ground running.</p>
+          <p>You should have completed WDD130 & WDD131 <strong>before</strong> enrolling in this course. </p>
           <p>Canvas should be open now if you want to get started early. No Pressure here.😃</p>
-          <p>You need to dedicate many hours per week to master these concepts. If you don't have that kind of time, you
-            may
-            want to take the class later when you can devote enough time to be successful.</p>
+          <p>You need to dedicate many hours per week to master these concepts. If you don't have that kind of time, you may want to take the class later when you can devote enough time to be successful.</p>
           <p>You will be using VS Code to create all your assignments and then hosting them on GitHub. Both are tools
-            used
-            by professionals in the field. </p>
+            used by professionals in the field. </p>
           <p>We will be using MS Teams for communication and teamwork, so ensure you have it installed and ready to go.
           </p>
           <p>It's going to be a fantastic and fast-paced ride for the next few weeks, so take your vitamin pills, and
