--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
           <p>You need to dedicate many hours per week to master these concepts. If you don't have that kind of time, you may want to take the class later when you can devote enough time to be successful.</p>
           <p>You will be using VS Code to create all your assignments and then hosting them on GitHub. Both are tools
             used by professionals in the field. </p>
+            <p>This course requires Advanced Computing Capability to complete the assignments in the course.<br>
+            https://www.byupathway.edu/technology-requirements</p>
           <p>We will be using MS Teams for communication and teamwork, so ensure you have it installed and ready to go.
           </p>
           <p>It's going to be a fantastic and fast-paced ride for the next few weeks, so take your vitamin pills, and
             let's
             get started.
-          <p>If you find yourself overwhelmed within the first week, you should drop the class.</p>
-          <p>https://studentservices.byupathway.edu/portal/class-schedule#how-do-i-register-and-drop-courses-in-a-term</p>
+          <p>If you find yourself overwhelmed within the first week, you should drop the class.<br>
+          https://studentservices.byupathway.edu/portal/class-schedule#how-do-i-register-and-drop-courses-in-a-term</p>
     
           <p>Bro/Sister Smith</p>
 
