--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       <section class="canvas">
         <button class="wk1d"></button>
         <p><b>Non-participating Students:</b> On <time class="date6a"></time>, message students who have not
-          yet submitted the "W01 Setup: Technology Stack". Inform them that this is a 7-week course, and remind them
+          yet submitted the "W01 Setup: Tools". Inform them that this is a 7-week course, and remind them
           of the upcoming registration deadline. Send a personalized version of the following message.</p>
         <div>
           <p><b>SUBJECT:</b> Checking In</p>
