--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             email me so we can work together to help you have a successful experience.
           </p>
           <p>If you do not intend to participate in this course this term, I recommend that you drop the course before
-            the registration deadline on xxxxxxxxxxxx. If you drop before then, you will receive a full tuition
+            the registration deadline on <time class="date8b"></time>. If you drop before then, you will receive a <strong>full tuition</strong>
             refund. If you choose to drop the class after the registration deadline, you will not be able to receive a
             tuition refund unless you withdraw from all your courses this term.</p>
           <p>I look forward to hearing from you and hope you have a successful experience!</p>
@@ -485,7 +485,7 @@
             keeping you from engaging in this class? Please email me so we can work together to help you have a
             successful term.😊</p>
           <p>If you do not intend to participate in this course this term, I recommend that you drop the course before
-            the drop deadline on XXXXXXXXX. Depending on your situation, you may be able to receive a prorated tuition
+            the drop deadline on <time class="date29d"></time>. Depending on your situation, you may be able to receive a <strong>prorated tuition</strong>
             refund. If you choose to drop the class after the drop deadline, you will receive a "W" grade on your
             transcript for this course</p>
           <p>Were you able to work through all the Learning Activities for last week?</p>
