--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
       <section class="canvas">
         <button class="wk3b"></button>
-        <p><b>Late Work:</b>On select the <b>W02 Assignment: Chamber Directory Page</b> in the gradebook and
+        <p><b>Late Work:</b> On <time class="date16a"></time> select the <b>W02 Assignment: Chamber Directory Page</b> in the gradebook and
           message students who have <b>not submitted</b> the assignment. Send a personalized version of the following
           email.</p>
         <div>
