--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
       <section class="canvas">
         <button class="wk3c"></button>
-        <p><b>Group Check:</b> On go back into Canvas > People > WDD231Groups tab and note the students who are
+        <p><b>Group Check:</b> On <time class="date16b"></time> go back into Canvas > People > WDD231Groups tab and note the students who are
           still not signed up for a group. Then look at the grades tab and see which ones have participated and which
           have not.<br>Send one of the following messages to each student using the envelope as shown below (green
           arrow). This typically takes me an hour or so to complete but is very beneficial for group work.</p>
@@ -619,7 +619,7 @@
 
       <section class="canvas">
         <button class="wk4b"></button>
-        <p><b>Late Work: </b>On <time class="date22b"></time> select the <b>W03 Assignment: Chamber Home
+        <p><b>Late Work: </b> On <time class="date22c"></time> select the <b>W03 Assignment: Chamber Home
             Page</b>> in the gradebook and message students who have <b>not submitted</b> the assignment. Send a
           personalized version of the following email.</p>
         <div>
@@ -633,7 +633,7 @@
 
       <section class="canvas">
         <button class="wk4c"></button>
-        <p><b>Positive Outreach:</b>On <time class="date25a"></time> identify students who scored more than
+        <p><b>Positive Outreach:</b> On <time class="date25a"></time> identify students who scored more than
           16/20 on <b>W03 Assignment: Chamber Home Page</b> and send them a message congratulating them on their work.
         </p>
         <div>
@@ -732,7 +732,7 @@
 
       <section class="canvas">
         <button class="wk6b"></button>
-        <p><b>Late Work:</b> On select the <b>W05 Assignment: Chamber Discover Page</b> in the gradebook and
+        <p><b>Late Work:</b> On <time class="date36c"></time> select the <b>W05 Assignment: Chamber Discover Page</b> in the gradebook and
           message students who have <b>not submitted</b> the assignment. Send a personalized version of the following
           email.
         </p>
