--- a/index.html
+++ b/index.html
@@ -553,8 +553,7 @@
 
       <section class="task">
         <button class="wk3d"></button>
-        <p>On <time class="date17a"></time> Open module 2 and find the "W02 Ponder: 60-second Status Update".
-          Download the student submissions.</p>
+        <p>On <time class="date17a"></time> Open module 2 and find the "W02 Ponder: 60-second Status Update".</p>
         <div>
           <ol>
             <li>Click the quiz in the module.</li>
