--- a/index.html
+++ b/index.html
@@ -308,6 +308,15 @@
         </div>
       </section> <!-- End of this section -->
 
+      <section class="task">
+        <p>Cheating</p>
+        <div>
+          <p>On occasion you find that two students have submitted the same work. You can look at the blame report in GitHub to see which one submitted their files first. In this example the student on the left submitted two days ago while the one o the right is still submitting as of 2 hours ago. </p>
+          <img src="images/blame-record.webp">
+          
+          </p>
+        </div>
+      </section> <!-- End of this section -->
 
     </details> <!-- end useful Tips -->
 
@@ -339,6 +348,16 @@
     <p>In this example, when I removed the final comment from the larger.css file it started working.</p>
     <img src="images/audit2.webp">
     </details> <!-- end audit errorsw -->
+
+
+
+
+
+
+
+
+
+
 
     <!-- ************************ Week One ***************************** -->
     <details id="week01start">
