--- a/index.html
+++ b/index.html
@@ -627,11 +627,7 @@
         <p>On <time class="date22b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Week 4: More tools for your toolbox</p>
-          <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with
-            dymanivally creating these modals using JavaScript. Before you go, we also have an enhancment to building a
-            form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web
-            page. 😊 If you have any questions, please post them in the appropriate weekly discussion channel of MS
-            Teams.</p>
+          <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with dynamically creating these modals using JavaScript. Before you go, we also have an enhancement to building a form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web page. 😊 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
         </div>
       </section> <!-- End of this section -->
 
