--- a/index.html
+++ b/index.html
@@ -676,8 +676,8 @@
         <button class="wk5a"></button>
         <p>On <time class="date29b"></time> post this announcement to Teams</p>
         <div>
-          <p><b>SUBJECT:</b> Week 5: Finishing up the Chamber Page</p>
-          <p>We're getting close to the end so hang on and keep taking your vitiman pills. This week you get to build a
+          <p><b>SUBJECT:</b> Week 5: Finishing up the Chamber Site</p>
+          <p>We're getting close to the end so hang on and keep taking your vitamin pills. This week you get to build a
             new page for your chamber web site that allows people to discover your home town. So be proud of your town
             and show us some cool things about where you live. If you have any questions, please post them in the
             appropriate weekly discussion channel of MS Teams. If you have any questions, please post them in the
