--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
       <section class="report">
         <button class="wk5r"></button>
         <p><b>Report:</b> <a
-            href="https://pdx1.qualtrics.com/login/authenticator/sso/v1/redirect?state=_0db319197f5b01c093c6529ac4785fb7">Report
+            href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=5&CMG=1&CourseCode=WDD%20231">Report
             your week 5 outreach</a> by midnight on <time class="date34"></time></p>
       </section><!-- End of this section -->
 
