--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
         <p>On <time class="date43b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Final Exam</p>
-          <p>This week is the big exam. Your project is also due by <time class="date45b"></time></p>
+          <p>This week is the big exam. Your Individual Website Project was due on <time class="date41a"></time> but if you need more time, the latest submission date is this <time class="date46a"></time></p>
         </div>
       </section> <!-- End of this section -->
 
@@ -803,10 +803,9 @@
           <img src="images/msgAllStudents.webp">
           <p><b>SUBJECT:</b> Class ends very soon</p>
           <p>Even though this awesome WDD231 block class will close on <time class="date48"></time> at midnight. You
-            must have ALL your assignments submitted by <time class="date46"></time> so the graders have time to grade
+            must have ALL your assignments submitted by <time class="date46b"></time> so the graders have time to grade
             before grades are due to the home office. <br>The most important submission is your finished Individual
-            Website Project. If you have late submissions from units 5 and 6, make sure to resubmit those before class
-            ends as well. Remember you have three opportunities for a regrade.<br>
+            Website Project. If you have late submissions from units 5 and 6, make sure to resubmit those before <time class="date46c"></time> as well. Remember you have three opportunities for a regrade.<br>
             Have you taken the opportunity to pray for the Holy Ghost to help you with any part of your assignment this
             week?<br>
             Bro/SisterSmith</p>
@@ -815,7 +814,7 @@
 
       <section class="canvas">
         <button class="wk7c"></button>
-        <p><b>Positive Outreach:</b> On <time class="date45a"></time> identify students who scored more than 0.5 on the
+        <p><b>Positive Outreach:</b> On <time class="date47a"></time> identify students who scored more than 0.5 on the
           <b>W07 End-of-Course Evaluation</b> and send them a message thanking them for their feedback.</p>
         <div>
           <p><b>SUBJECT:</b> Providing Feedback</p>
