--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
           <p>Even though this awesome WDD231 block class will close on <time class="date48"></time> at midnight. You
             must have ALL your assignments submitted by <time class="date46b"></time> so the graders have time to grade
             before grades are due to the home office. <br>The most important submission is your finished Individual
-            Website Project. If you have late submissions from units 5 and 6, make sure to resubmit those before <time class="date46c"></time> as well. Remember you have three opportunities for a regrade.<br>
+            Website Project. The Individual Website Project does NOT have any resubmission options so make sure its crrect the first time.<br> If you have late submissions from units 5 and 6, make sure to resubmit those before <time class="date46c"></time> as well.<br>
             Have you taken the opportunity to pray for the Holy Ghost to help you with any part of your assignment this
             week?<br>
             Bro/SisterSmith</p>
