--- a/index.html
+++ b/index.html
@@ -694,8 +694,7 @@
           <p><b>SUBJECT:</b> Missing the join page from last week</p>
           <p>I noticed that you have not yet submitted last week's web form assignment on your GitHub home page. As you
             know, you can still turn it in but we are getting close to the end of the semester.<br>
-            Have you taken the opportunity to pray for the Holy Ghost to help you with any part of your assignment this
-            week?<br>
+            Have you taken the opportunity to pray for the Holy Ghost to help you with any part of your assignment this week?<br>
             Bro/Sister Smith</p>
         </div>
       </section> <!-- End of this section -->
