--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div>
           <ul>
             <li>Select the Dashboard icon on the left panel.</li>
-            <li>Click the new WDD231 course.</li>
+            <li>Click the new WDD231 course icon.</li>
             <li>Select the tripple dots and change the Nickname. The current name will have you section number and the full name of the coruse which gets clipped.</li>
             <li>Update the Canvas name to include WDD231 and the term number 1-6 (as appropiate)</li>
             <li>OPTIONAL - Open your Canvas course and choose the "Settings" link at the bottom of the list</li>
