--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <meta property="og:title" content="Outreach for WDD231">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://paulcheney.github.io/wdd231-outreach">
+    <meta property="og:image" content="https://paulcheney.github.io/wdd231-outreach/images/pg-image.jpg">
+
 </head>
 
 <body>
