--- a/index.html
+++ b/index.html
@@ -462,8 +462,11 @@
           <p><b>SUBJECT:</b> Week 2: Looking forward to this module.</p>
           <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using
             fetch. It's a powerful skill to have on your resume. You should have some fun when you learn to animate your
-            small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰 If you have any questions,
-            please post them in the appropriate weekly discussion channel of MS Teams.</p>
+            small screen navigation using CSS Grid and transitions. It's pretty cool. 🥰 <br><br>
+            Remember that <strong>frameworks are not allowed</strong> in this course. If you want to use SVG icons for your footer, please review the instructions from WDD131 week 3. https://byui-cse.github.io/wdd131-ww-course/week03/prepare-webp.html<br><br>
+            You can also review this video on <strong>styling svg icons</strong> for your footer. <br>
+            https://video.byui.edu/media/t/1_tnkrx73u <br><br>
+            If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
         </div>
       </section> <!-- End of this section -->
 
