--- a/index.html
+++ b/index.html
@@ -222,8 +222,11 @@
     <details id="week01start">
       <summary>Useful Tips</summary>
       <p><strong>Communication Channels:</strong> When communicating with students one-on-one, use <strong>MS
-          Teams</strong>. When sending group outreach messages for assignment progress, use <strong>Canvas
-          Gradebook</strong>.</p>
+        Teams</strong>. When sending group outreach messages for assignment progress, use <strong>Canvas
+        Gradebook</strong>.  </p>
+
+          <p><strong>Escalation Form:</strong> After a student has submitted a ticket and they have not recieved an answer after waiting 5 days, you can escalate their request by completing the <a href="https://customervoice.microsoft.com/Pages/ResponsePage.aspx?id=4UqAQunSt0Cko0WBEjQpi5d6jfvu-ahOibjN8Psq-sZURDBBMEgxMTlBUjNUWEpMU1gxQUtYVDNOMi4u" target="_blank">Student Support Escalation</a> form. </p>
+
       <section class="task">
         <p>What Section do I have?</p>
         <div>
@@ -316,7 +319,7 @@
       <section class="task">
         <p>Cheating</p>
         <div>
-          <p>On occasion you find that two students have submitted the same work. You can look at the blame report in GitHub to see which one submitted their files first. In this example the student on the left submitted two days ago while the one o the right is still submitting as of 2 hours ago. </p>
+          <p>On occasion you find that two students have submitted the same work. You can look at the blame report in GitHub to see which one submitted their files first. In this example the student on the left submitted two days ago while the one on the right is still submitting as of 2 hours ago. </p>
           <img src="images/blame-record.webp">
           
           </p>
