--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
       <section class="canvas">
         <button class="wk1b"></button>
-        <p><b>Slow Starting:</b> On <time class="date5a"></time>, open the "People" tab on the left side. Choose the "WDD231Teams" Tab. From the three dots, select "Message all unasigned Students" and send a personalized version of the following message.
+        <p><b>Slow Starting:</b> On <time class="date5a"></time>, open Canvas then the "People" tab on the left side. Choose the "WDD231Teams" Tab. From the three dots, select "Message all unasigned Students" and send a personalized version of the following message.
           <img src="images/nogroup.png">
         </p>
         
