--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             email me so we can work together to help you have a successful experience.
           </p>
           <p>If you do not intend to participate in this course this term, I recommend that you drop the course before
-            the registration deadline on <time class="date8b"></time>. If you drop before then, you will receive a <strong>full tuition</strong>
+            the registration deadline on <time class="date7a"></time>. If you drop before then, you will receive a <strong>full tuition</strong>
             refund. If you choose to drop the class after the registration deadline, you will not be able to receive a
             tuition refund unless you withdraw from all your courses this term.</p>
           <p>I look forward to hearing from you and hope you have a successful experience!</p>
