--- a/index.html
+++ b/index.html
@@ -456,11 +456,11 @@
 
     <!-- ************************ Week Two ***************************** -->
     <details id="week02start">
-      <summary>Week 2 <time class="date8a"></time></summary>
+      <summary>Week 2 <time class="date7b"></time></summary>
 
       <section class="teams">
         <button class="wk2a"></button>
-        <p>On <time class="date8b"></time> post this announcement to Teams</p>
+        <p>On <time class="date7c"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Week 2: Looking forward to this module.</p>
           <p>This week will be fast and furious as you learn to build you own JSON data file and then import it using
@@ -475,20 +475,7 @@
 
 
 
-      <section class="canvas">
-        <button class="wk2b"></button>
-        <p><b>Group of One Problem</b> On <time class="date8b"></time> go to Canvas and review the People >
-          WDD231Groups and identify all students in a group of one. Return to Canvas and using the Inbox > Compose a New
-          Message send a message to this list of single group students.</p>
-        <div>
-          <p><b>SUBJECT:</b> Selecting a new group</p>
-          <p>You appear to be the only student who signed up for your group time. 🤪 To complete the group activities
-            each week, you must join another group. Please go back to Canvas and add yourself to a different group, and
-            then go to Teams and introduce yourself to your new group. You must attend a group meeting this week, so do
-            this today if possible.<br>
-            Bro/Sister Smith</p>
-        </div>
-      </section> <!-- End of this section -->
+
 
 
 
@@ -524,22 +511,38 @@
         </div>
       </section> <!-- End of this section -->
 
+      <section class="canvas">
+        <button class="wk2b"></button>
+        <p><b>Group of One Problem</b> On <time class="date11a"></time> go to Canvas and review the People >
+          WDD231Groups and identify all students in a group of one. Return to Canvas and using the Inbox > Compose a New
+          Message send a message to this list of single group students.</p>
+        <div>
+          <p><b>SUBJECT:</b> Selecting a new group</p>
+          <p>You appear to be the only student who signed up for your group time. 🤪 To complete the group activities
+            each week, you must join another group. Please go back to Canvas and add yourself to a different group, and
+            then go to Teams and introduce yourself to your new group. You must attend a group meeting this week, so do
+            this today if possible.<br>
+            Bro/Sister Smith</p>
+        </div>
+      </section> <!-- End of this section -->
+
+
       <section class="report">
         <button class="wk2r"></button>
         <p><b>Report:</b> <a
             href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=2&CMG=1&CourseCode=WDD%20231">Report
-            your week 2 outreach</a> by midnight on <time class="date13"></time></p>
+            your week 2 outreach</a> by midnight on <time class="date12a"></time></p>
       </section><!-- End of this section -->
 
     </details><!-- end of week 2 -->
 
     <!-- ************************ Week Three ***************************** -->
     <details id="week03start">
-      <summary>Week 3 <time class="date15a"></time></summary>
+      <summary>Week 3 <time class="date14a"></time></summary>
 
       <section class="teams">
         <button class="wk3a"></button>
-        <p>On <time class="date15b"></time> post this announcement to Teams</p>
+        <p>On <time class="date14b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Week 3: Playing with the Big Boys Now</p>
           <p>This week you get to interact with a professional level weather API and report dynamic data on your very
@@ -622,7 +625,7 @@
         <button class="wk3r"></button>
         <p><b>Report:</b> <a
             href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=3&CMG=1&CourseCode=WDD%20231">Report
-            your week 3 outreach</a> by midnight on <time class="date20"></time></p>
+            your week 3 outreach</a> by midnight on <time class="date19c"></time></p>
       </section><!-- End of this section -->
 
     </details><!-- end of week 3 -->
@@ -631,11 +634,11 @@
 
     <!-- ************************ Week Four ***************************** -->
     <details id="week04start">
-      <summary>Week 4 <time class="date22a"></time></summary>
+      <summary>Week 4 <time class="date21a"></time></summary>
 
       <section class="teams">
         <button class="wk4a"></button>
-        <p>On <time class="date22b"></time> post this announcement to Teams</p>
+        <p>On <time class="date21b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Week 4: More tools for your toolbox</p>
           <p>This week you get to implement and design an HTML5 popup modal. We will also take it to the next level with dynamically creating these modals using JavaScript. Before you go, we also have an enhancement to building a form (you learned this in WDD131). We are going to grab data from a URL string and display it onto a web page. 😊 If you have any questions, please post them in the appropriate weekly discussion channel of MS Teams.</p>
@@ -674,18 +677,25 @@
         <button class="wk4r"></button>
         <p><b>Report:</b> <a
             href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=4&CMG=1&CourseCode=WDD%20231">Report
-            your week 4 outreach</a> by midnight on <time class="date27"></time></p>
+            your week 4 outreach</a> by midnight on <time class="date26a"></time></p>
       </section><!-- End of this section -->
 
     </details><!-- end of week 4 -->
 
+
+
+
+
+
+
+
     <!-- ************************ Week FIVE ***************************** -->
     <details id="week05start">
-      <summary>Week 5 <time class="date29a"></time></summary>
+      <summary>Week 5 <time class="date28a"></time></summary>
 
       <section class="teams">
         <button class="wk5a"></button>
-        <p>On <time class="date29b"></time> post this announcement to Teams</p>
+        <p>On <time class="date28b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Week 5: Finishing up the Chamber Site</p>
           <p>We're getting close to the end so hang on and keep taking your vitamin pills. This week you get to build a
@@ -728,18 +738,18 @@
         <button class="wk5r"></button>
         <p><b>Report:</b> <a
             href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=5&CMG=1&CourseCode=WDD%20231">Report
-            your week 5 outreach</a> by midnight on <time class="date34"></time></p>
+            your week 5 outreach</a> by midnight on <time class="date33"></time></p>
       </section><!-- End of this section -->
 
     </details><!-- end of week 5 -->
 
     <!-- ************************ Week SIX ***************************** -->
     <details id="week06start">
-      <summary>Week 6 <time class="date36a"></time></summary>
+      <summary>Week 6 <time class="date35a"></time></summary>
 
       <section class="teams">
         <button class="wk6a"></button>
-        <p>On <time class="date36b"></time> post this announcement to Teams</p>
+        <p>On <time class="date35b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Week 6: The beginning of the end of this class.</p>
           <p>The final assessment for this class is a multiple-page website, and the best part is that you get to choose
@@ -787,7 +797,7 @@
         <button class="wk6r"></button>
         <p><b>Report:</b> <a
             href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=6&CMG=1&CourseCode=WDD%20231">Report
-            your week 6 outreach</a> by midnight on <time class="date41"></time></p>
+            your week 6 outreach</a> by midnight on <time class="date40a"></time></p>
       </section><!-- End of this section -->
 
     </details><!-- end of week 6 -->
@@ -795,35 +805,35 @@
 
     <!-- ************************ Week SEVEN ***************************** -->
     <details id="week07start">
-      <summary>Week 7 <time class="date43a"></time></summary>
+      <summary>Week 7 <time class="date42a"></time></summary>
 
       <section class="teams">
         <button class="wk7a"></button>
-        <p>On <time class="date43b"></time> post this announcement to Teams</p>
+        <p>On <time class="date42b"></time> post this announcement to Teams</p>
         <div>
           <p><b>SUBJECT:</b> Final Exam</p>
-          <p>This week is the big exam. Your Individual Website Project was due on <time class="date41a"></time> but if you need more time, the latest submission date is this <time class="date46a"></time></p>
+          <p>This week is the big exam. Your Individual Website Project was due on <time class="date40b"></time> but if you need more time, the latest submission date is this <time class="date45a"></time></p>
         </div>
       </section> <!-- End of this section -->
 
       <section class="canvas">
         <button class="wk7b"></button>
-        <p>On send the following message to ALL students in the course. Use the Canvas InBox > Compose a New Message >
+        <p>On <time class="date42c"> </time> send the following message to ALL students in the course. Use the Canvas InBox > Compose a New Message >
           to all in this class.</p>
         <div>
           <img src="images/msgAllStudents.webp">
           <p><b>SUBJECT:</b> Class ends very soon</p>
-          <p>Even though this awesome WDD231 block class will close on <time class="date48"></time> at midnight. You
-            must have ALL your assignments submitted by <time class="date46b"></time> so the graders have time to grade
+          <p>Even though this awesome WDD231 block class will close on <time class="date47a"></time> at midnight. You
+            must have ALL your assignments submitted by <time class="date45b"></time> so the graders have time to grade
             before grades are due to the home office. <br>The most important submission is your finished Individual
-            Website Project. The Individual Website Project does NOT have any resubmission options so make sure its crrect the first time.<br> If you have late submissions from units 5 and 6, make sure to resubmit those before <time class="date46c"></time> as well.<br>
+            Website Project.<br> If you have late submissions from units 5 and 6, make sure to resubmit those before <time class="date46a"></time> as well.<br>
             Bro/SisterSmith</p>
         </div>
       </section> <!-- End of this section -->
 
       <section class="canvas">
         <button class="wk7c"></button>
-        <p><b>Positive Outreach:</b> On <time class="date47a"></time> identify students who scored more than 0.5 on the
+        <p><b>Positive Outreach:</b> On <time class="date47b"></time> identify students who scored more than 0.5 on the
           <b>W07 End-of-Course Evaluation</b> and send them a message thanking them for their feedback.</p>
         <div>
           <p><b>SUBJECT:</b> Providing Feedback</p>
@@ -836,7 +846,7 @@
         <button class="wk7r"></button>
         <p><b>Report:</b> <a
             href="https://byui.az1.qualtrics.com/jfe/form/SV_8oF267U5kSJoLY2?WeekNo=7&CMG=1&CourseCode=WDD%20231">Report
-            your week 7 outreach</a> by midnight on <time class="date48a"></time></p>
+            your week 7 outreach</a> by midnight on <time class="date46c"></time></p>
       </section><!-- End of this section -->
 
 
