--- a/index.html
+++ b/index.html
@@ -254,6 +254,23 @@
       </section> <!-- End of this section -->
 
       <section class="task">
+        <p>Extra Try on Final Exam</p>
+        <div>
+          <p>On rare occasions students may start the final exam and have a power outage and need a second attemnt.</p>
+          <ul>
+            <li>Open the <strong>W07 Final Exam</strong> in Canvas</li>
+            <li>On the right, click the <strong>Moderate This Quiz</strong> link</li>
+            <li>Find the student in the list. You can see how long they spent which helps you verify their claim to need another attempt.</li>
+            <li>Currently they will have o attempts left.</li>
+            <li>Click the pencil icon</li>
+            <li>Change the Extra Attempts to 1.</li>
+          
+          </ul>
+          <img src="images/final-extra-try.webp">
+        </div>
+      </section> <!-- End of this section -->
+
+      <section class="task">
         <p>Submission Comments</p>
         <div>
           <p>The grading team will respond to the majority of comments left with assignment submissions. When these
