--- a/index.html
+++ b/index.html
@@ -150,16 +150,6 @@
       </section> <!-- End of this section -->
 
 
-      <section class="teams">
-        <button class="wk0i"></button>
-        <p>Post a message in Teams Week 1 Channel</p>
-        <div>
-          <p>Post a message about UCT.</p>
-          <p>SUBJECT: Universal Coordinated Time Offset <br>As a worldwide church, we are no longer using MT as the standard for due dates and team meetings. Instead, all due dates are now set to UCT. Please take a minute to find the offset from where you live. Assignments and team meetings could be EARLIER than listed time as much as 11 hours, or they could be later. 😁
-            Please take responsibility for managing this time difference. This tool may be helpful. https://savvytime.com/converter</p>
-        </div>
-      </section> <!-- End of this section -->
-
 
       <section class="task">
         <button class="wk0f"></button>
@@ -218,6 +208,16 @@
       </section> <!-- End of this section -->
 
       <section class="teams">
+        <button class="wk0i"></button>
+        <p>Post a message in "General Questions Week 1" Channel</p>
+        <div>
+          <p>Post a message about UCT.</p>
+          <p>SUBJECT: Universal Coordinated Time Offset <br>As a worldwide church, we are no longer using MT as the standard for due dates and team meetings. Instead, all due dates are now set to UCT. Please take a minute to find the offset from where you live. Assignments and team meetings could be EARLIER than listed time as much as 11 hours, or they could be later. 😁
+            Please take responsibility for managing this time difference. This tool may be helpful. https://www.worldtimebuddy.com</p>
+        </div>
+      </section> <!-- End of this section -->
+
+      <section class="report">
         <button class="wk0h"></button>
         <p>Pre-term Checklist</p>
         <div>
